fixing some layout issues

--- a/src/pages/Resume/Resume.scss
+++ b/src/pages/Resume/Resume.scss
@@ -51,6 +51,10 @@
 
         &-right {
             margin: 0;
+
+            &-warn {
+                margin-top: 1rem;
+            }
         }
     }
 }
